--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
   "content_scripts": [
    {
      
-     "matches": ["*://*.w3schools.com/*"],
+     "matches": ["*://*.youtube.com/*"],
      "js": ["ytContentScript.js"],
 	 "run_at": "document_end"    // Pay attention to this line
    }
